Fix overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,6 +39,8 @@ html {
 }
 
 body {
+  max-width: 1920px;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
 }
@@ -171,8 +173,8 @@ h3 {
   margin-bottom: 350px;
 }
 
-.pt-190 {
-  padding-top: 190px;
+.pt-200 {
+  padding-top: 200px;
 }
 
 .p-55 {
